--- a/arch/arm/configs/cyanogen_d2_defconfig
+++ b/arch/arm/configs/cyanogen_d2_defconfig
@@ -1,8 +1,7 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.45 Kernel Configuration
+# Linux/arm 3.4.62 Kernel Configuration
 #
-
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
 CONFIG_MIGHT_HAVE_PCI=y
@@ -34,6 +33,7 @@ CONFIG_GENERIC_BUG=y
 CONFIG_GENERIC_TIME_VSYSCALL=y
 CONFIG_ARM_USE_USER_ACCESSIBLE_TIMERS=y
 CONFIG_ARM_USER_ACCESSIBLE_TIMER_BASE=0xfffef000
+# CONFIG_ARCH_RANDOM is not set
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_HAVE_IRQ_WORK=y
 CONFIG_IRQ_WORK=y
@@ -92,7 +92,10 @@ CONFIG_CGROUP_FREEZER=y
 # CONFIG_CPUSETS is not set
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
-# CONFIG_CGROUP_MEM_RES_CTLR is not set
+CONFIG_CGROUP_MEM_RES_CTLR=y
+CONFIG_CGROUP_MEM_RES_CTLR_SWAP=y
+CONFIG_CGROUP_MEM_RES_CTLR_SWAP_ENABLED=y
+# CONFIG_CGROUP_MEM_RES_CTLR_KMEM is not set
 # CONFIG_CGROUP_PERF is not set
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
@@ -107,6 +110,7 @@ CONFIG_NAMESPACES=y
 # CONFIG_PID_NS is not set
 # CONFIG_NET_NS is not set
 # CONFIG_SCHED_AUTOGROUP is not set
+CONFIG_MM_OWNER=y
 # CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
 CONFIG_BLK_DEV_INITRD=y
@@ -146,19 +150,20 @@ CONFIG_PERF_USE_VMALLOC=y
 # Kernel Performance Events And Counters
 #
 CONFIG_PERF_EVENTS=y
-CONFIG_PERF_COUNTERS=y
-CONFIG_DEBUG_PERF_USE_VMALLOC=y
+# CONFIG_PERF_COUNTERS is not set
+# CONFIG_DEBUG_PERF_USE_VMALLOC is not set
 CONFIG_VM_EVENT_COUNTERS=y
 CONFIG_SLUB_DEBUG=y
 CONFIG_COMPAT_BRK=y
 # CONFIG_SLAB is not set
 CONFIG_SLUB=y
 # CONFIG_SLOB is not set
-# CONFIG_PROFILING is not set
+CONFIG_PROFILING=y
 CONFIG_TRACEPOINTS=y
+# CONFIG_OPROFILE is not set
 CONFIG_HAVE_OPROFILE=y
 # CONFIG_KPROBES is not set
-CONFIG_JUMP_LABEL=y
+# CONFIG_JUMP_LABEL is not set
 CONFIG_HAVE_KPROBES=y
 CONFIG_HAVE_KRETPROBES=y
 CONFIG_HAVE_DMA_ATTRS=y
@@ -379,8 +384,7 @@ CONFIG_BOARD_HEADER_FILE=""
 #
 # CONFIG_LGE_CRASH_HANDLER is not set
 # CONFIG_MSM_STACKED_MEMORY is not set
-CONFIG_HAVE_END_MEM=y
-CONFIG_END_MEM=0xffffffff
+# CONFIG_HAVE_END_MEM is not set
 CONFIG_KERNEL_MSM_CONTIG_MEM_REGION=y
 CONFIG_MSM_AMSS_VERSION=6225
 # CONFIG_MSM_AMSS_VERSION_6210 is not set
@@ -421,6 +425,7 @@ CONFIG_MSM_SMD=y
 CONFIG_MSM_SMD_PKG4=y
 CONFIG_MSM_SMD_DEBUG=y
 CONFIG_MSM_BAM_DMUX=y
+# CONFIG_MSM_BAM_DMUX_NOLOCK is not set
 CONFIG_MSM_N_WAY_SMD=y
 CONFIG_MSM_N_WAY_SMSM=y
 CONFIG_MSM_RESET_MODEM=m
@@ -444,7 +449,7 @@ CONFIG_AMSS_7X25_VERSION_2009=y
 # CONFIG_AMSS_7X25_VERSION_2008 is not set
 CONFIG_RTAC=y
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
-CONFIG_MSM_DMA_TEST=m
+CONFIG_MSM_DMA_TEST=y
 CONFIG_WIFI_CONTROL_FUNC=y
 # CONFIG_WIFI_MEM_PREALLOC is not set
 CONFIG_MSM_SLEEP_TIME_OVERRIDE=y
@@ -480,6 +485,7 @@ CONFIG_MSM_RPM_LOG=y
 CONFIG_MSM_RPM_STATS_LOG=y
 # CONFIG_MSM_RPM_RBCPR_STATS_LOG is not set
 CONFIG_MSM_DIRECT_SCLK_ACCESS=y
+CONFIG_IOMMU_API=y
 CONFIG_MSM_GPIOMUX=y
 CONFIG_MSM_NATIVE_RESTART=y
 CONFIG_MSM_PM8X60=y
@@ -515,11 +521,13 @@ CONFIG_MSM_MULTIMEDIA_USE_ION=y
 # CONFIG_MSM_EBI_ERP is not set
 CONFIG_MSM_CACHE_ERP=y
 CONFIG_MSM_L1_ERR_PANIC=y
+# CONFIG_MSM_L1_RECOV_ERR_PANIC is not set
 # CONFIG_MSM_L1_ERR_LOG is not set
 # CONFIG_MSM_L2_ERP_PRINT_ACCESS_ERRORS is not set
 # CONFIG_MSM_L2_ERP_1BIT_PANIC is not set
 CONFIG_MSM_L2_ERP_2BIT_PANIC=y
 CONFIG_MSM_DCVS=y
+# CONFIG_MSM_DCVS_FOR_MSM8260A is not set
 # CONFIG_MSM_CPR is not set
 CONFIG_HAVE_ARCH_HAS_CURRENT_TIMER=y
 # CONFIG_MSM_CACHE_DUMP is not set
@@ -717,8 +725,6 @@ CONFIG_CPU_FREQ_MSM=y
 #
 # At least one emulation must be selected
 #
-# CONFIG_FPE_NWFPE is not set
-# CONFIG_FPE_FASTFPE is not set
 CONFIG_VFP=y
 CONFIG_VFPv3=y
 CONFIG_NEON=y
@@ -1014,7 +1020,9 @@ CONFIG_IP6_NF_RAW=y
 # CONFIG_RDS is not set
 # CONFIG_TIPC is not set
 # CONFIG_ATM is not set
-# CONFIG_L2TP is not set
+CONFIG_L2TP=y
+# CONFIG_L2TP_DEBUGFS is not set
+# CONFIG_L2TP_V3 is not set
 # CONFIG_BRIDGE is not set
 # CONFIG_NET_DSA is not set
 # CONFIG_VLAN_8021Q is not set
@@ -1076,10 +1084,9 @@ CONFIG_NET_EMATCH_U32=y
 CONFIG_NET_EMATCH_META=y
 CONFIG_NET_EMATCH_TEXT=y
 CONFIG_NET_CLS_ACT=y
-CONFIG_NET_ACT_POLICE=y
-CONFIG_NET_ACT_GACT=y
-# CONFIG_GACT_PROB is not set
-CONFIG_NET_ACT_MIRRED=y
+# CONFIG_NET_ACT_POLICE is not set
+# CONFIG_NET_ACT_GACT is not set
+# CONFIG_NET_ACT_MIRRED is not set
 # CONFIG_NET_ACT_IPT is not set
 # CONFIG_NET_ACT_NAT is not set
 # CONFIG_NET_ACT_PEDIT is not set
@@ -1307,6 +1314,7 @@ CONFIG_MPU_SENSORS_AK8975_411=y
 # CONFIG_MPU_SENSORS_HSCDTD002B_411 is not set
 # CONFIG_MPU_SENSORS_HSCDTD004A_411 is not set
 # CONFIG_MPU_USERSPACE_DEBUG is not set
+# CONFIG_INPUT_YAS_SENSORS is not set
 
 #
 # Altera FPGA firmware download module
@@ -1458,6 +1466,7 @@ CONFIG_PPP_DEFLATE=y
 CONFIG_PPP_MPPE=y
 # CONFIG_PPP_MULTILINK is not set
 # CONFIG_PPPOE is not set
+# CONFIG_PPPOL2TP is not set
 CONFIG_PPPOLAC=y
 CONFIG_PPPOPNS=y
 # CONFIG_PPP_ASYNC is not set
@@ -1512,14 +1521,13 @@ CONFIG_WLAN=y
 # CONFIG_ATH6K_LEGACY_EXT is not set
 # CONFIG_WCNSS_CORE is not set
 # CONFIG_ATH_COMMON is not set
-CONFIG_BCMDHD=m
 # CONFIG_BCM4330 is not set
 CONFIG_BCM4334=y
+# CONFIG_BCM4335 is not set
 # CONFIG_BCM43241 is not set
+CONFIG_BROADCOM_WIFI=y
 CONFIG_BCMDHD_FW_PATH="/system/etc/wifi/bcmdhd_sta.bin_b2"
 CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/nvram_net.txt"
-# CONFIG_DHD_USE_STATIC_BUF is not set
-# CONFIG_DHD_USE_SCHED_SCAN is not set
 CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
 CONFIG_WLAN_REGION_CODE=100
 # CONFIG_BRCMFMAC is not set
@@ -1582,6 +1590,7 @@ CONFIG_KEYBOARD_GPIO=y
 # CONFIG_KEYBOARD_XTKBD is not set
 # CONFIG_KEYBOARD_QCIKBD is not set
 CONFIG_KEYBOARD_CYPRESS_TOUCH_236=y
+# CONFIG_KEYBOARD_CYPRESS_TOUCH_BLN is not set
 CONFIG_INPUT_MOUSE=y
 CONFIG_MOUSE_PS2=y
 CONFIG_MOUSE_PS2_ALPS=y
@@ -1639,6 +1648,8 @@ CONFIG_TOUCHSCREEN_MMS144=y
 # CONFIG_TOUCHSCREEN_BU21013 is not set
 # CONFIG_TOUCHSCREEN_CY8CTMG110 is not set
 # CONFIG_TOUCHSCREEN_CYTTSP_CORE is not set
+# CONFIG_TOUCHSCREEN_MXT224 is not set
+# CONFIG_TOUCHSCREEN_MXT224S is not set
 # CONFIG_TOUCHSCREEN_DYNAPRO is not set
 # CONFIG_TOUCHSCREEN_HAMPSHIRE is not set
 # CONFIG_TOUCHSCREEN_EETI is not set
@@ -1788,7 +1799,7 @@ CONFIG_HW_RANDOM_MSM=y
 # CONFIG_DCC_TTY is not set
 # CONFIG_RAMOOPS is not set
 CONFIG_MSM_ROTATOR=y
-CONFIG_MSM_ADSPRPC=m
+CONFIG_MSM_ADSPRPC=y
 # CONFIG_MMC_GENERIC_CSDIO is not set
 CONFIG_I2C=y
 CONFIG_I2C_BOARDINFO=y
@@ -2358,28 +2369,11 @@ CONFIG_QUP_EXCLUSIVE_TO_CAMERA=y
 #
 # Camera Sensor Selection
 #
-# CONFIG_IMX074 is not set
-# CONFIG_OV5647 is not set
-# CONFIG_MSM_CAMERA_FLASH_TPS61310 is not set
-# CONFIG_OV2720 is not set
-# CONFIG_OV8825 is not set
-# CONFIG_IMX135 is not set
-# CONFIG_OV9724 is not set
-# CONFIG_MSM_EEPROM is not set
-# CONFIG_IMX074_EEPROM is not set
-# CONFIG_IMX091_EEPROM is not set
-CONFIG_MSM_MERCURY=y
-# CONFIG_MSM_CAM_IRQ_ROUTER is not set
-# CONFIG_MSM_CPP is not set
-# CONFIG_MSM_CCI is not set
-CONFIG_MSM_CSI20_HEADER=y
-# CONFIG_MSM_CSI30_HEADER is not set
-# CONFIG_MSM_CSIPHY is not set
-# CONFIG_MSM_CSID is not set
-# CONFIG_MSM_CSI2_REGISTER is not set
-# CONFIG_MSM_ISPIF is not set
+# CONFIG_S5K4ECGX is not set
+# CONFIG_S5K5CCGX is not set
+# CONFIG_DB8131M is not set
+# CONFIG_SR030PC50 is not set
 # CONFIG_S5K3L1YX is not set
-# CONFIG_IMX091 is not set
 # CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE is not set
 # CONFIG_OV7692 is not set
 # CONFIG_V4L_MEM2MEM_DRIVERS is not set
@@ -2499,6 +2493,7 @@ CONFIG_SAMSUNG_CMC624=y
 # CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WVGA_PT is not set
 # CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WSVGA_PT is not set
 # CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WUXGA is not set
+# CONFIG_FB_MSM_MIPI_MAGNA_OLED_VIDEO_WVGA_PT is not set
 # CONFIG_FB_MSM_MIPI_NOVATEK_VIDEO_QHD_PT is not set
 # CONFIG_FB_MSM_MIPI_NOVATEK_CMD_QHD_PT is not set
 # CONFIG_FB_MSM_MIPI_ORISE_VIDEO_720P_PT is not set
@@ -2548,6 +2543,7 @@ CONFIG_FB_MSM_WRITEBACK_MSM_PANEL=y
 # CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WVGA_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WSVGA_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WUXGA_PANEL is not set
+# CONFIG_FB_MSM_MIPI_MAGNA_OLED_VIDEO_WVGA_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_NOVATEK_VIDEO_QHD_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_NOVATEK_CMD_QHD_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_ORISE_VIDEO_720P_PT_PANEL is not set
@@ -2925,6 +2921,7 @@ CONFIG_USB_QCOM_DIAG_BRIDGE=y
 # CONFIG_USB_QCOM_DIAG_BRIDGE_TEST is not set
 CONFIG_USB_QCOM_MDM_BRIDGE=y
 # CONFIG_USB_QCOM_KS_BRIDGE is not set
+# CONFIG_USB_QCOM_IPC_BRIDGE is not set
 CONFIG_USB_GADGET=y
 # CONFIG_USB_GADGET_DEBUG is not set
 # CONFIG_USB_GADGET_DEBUG_FILES is not set
@@ -2983,10 +2980,12 @@ CONFIG_USB_OTG_UTILS=y
 # CONFIG_USB_MSM_OTG_72K is not set
 # CONFIG_NOP_USB_XCEIV is not set
 CONFIG_USB_MSM_OTG=y
+# CONFIG_USB_MSM_USE_POWER_SUPPLY_API is not set
 # CONFIG_USB_MSM_ACA is not set
+# CONFIG_USB_HOST_NOTIFY is not set
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
-# CONFIG_MMC_PERF_PROFILING is not set
+CONFIG_MMC_PERF_PROFILING=y
 CONFIG_MMC_UNSAFE_RESUME=y
 CONFIG_MMC_CLKGATE=y
 # CONFIG_MMC_EMBEDDED_SDIO is not set
@@ -3064,6 +3063,8 @@ CONFIG_LEDS_TRIGGERS=y
 # CONFIG_LEDS_TRIGGER_GPIO is not set
 # CONFIG_LEDS_TRIGGER_DEFAULT_ON is not set
 # CONFIG_LEDS_TRIGGER_SLEEP is not set
+# CONFIG_LEDS_MSM_TKEY is not set
+# CONFIG_LEDS_MSM_KB is not set
 
 #
 # iptables trigger is under Netfilter config (LED target)
@@ -3218,6 +3219,7 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 # Qualcomm Atheros Prima WLAN module
 #
 # CONFIG_PRIMA_WLAN is not set
+# CONFIG_PRONTO_WLAN is not set
 
 #
 # Qualcomm MSM specific device drivers
@@ -3227,6 +3229,7 @@ CONFIG_SPS=y
 # CONFIG_USB_BAM is not set
 CONFIG_SPS_SUPPORT_BAMDMA=y
 # CONFIG_SPS_SUPPORT_NDP_BAM is not set
+# CONFIG_MSM_AVTIMER is not set
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_HAVE_CLK_PREPARE=y
 CONFIG_NEW_SENSORS=y
@@ -3238,7 +3241,9 @@ CONFIG_VIBETONZ=y
 # Hardware Spinlock drivers
 #
 CONFIG_IOMMU_SUPPORT=y
-# CONFIG_MSM_IOMMU is not set
+CONFIG_MSM_IOMMU=y
+CONFIG_MSM_IOMMU_GPU_SYNC=y
+CONFIG_IOMMU_PGTABLES_L2=y
 
 #
 # Remoteproc drivers (EXPERIMENTAL)
@@ -3262,8 +3267,6 @@ CONFIG_EXT4_USE_FOR_EXT23=y
 CONFIG_EXT4_FS_XATTR=y
 # CONFIG_EXT4_FS_POSIX_ACL is not set
 # CONFIG_EXT4_DEBUG is not set
-CONFIG_JBD=y
-# CONFIG_JBD_DEBUG is not set
 CONFIG_JBD2=y
 # CONFIG_JBD2_DEBUG is not set
 CONFIG_FS_MBCACHE=y
@@ -3464,7 +3467,7 @@ CONFIG_DEBUG_INFO=y
 # CONFIG_DEBUG_INFO_REDUCED is not set
 # CONFIG_DEBUG_VM is not set
 # CONFIG_DEBUG_WRITECOUNT is not set
-# CONFIG_DEBUG_MEMORY_INIT is not set
+CONFIG_DEBUG_MEMORY_INIT=y
 # CONFIG_DEBUG_LIST is not set
 # CONFIG_TEST_LIST_SORT is not set
 # CONFIG_DEBUG_SG is not set
